added genome version

--- a/summaries/final report/Latex_version/Report.tex
+++ b/summaries/final report/Latex_version/Report.tex
@@ -173,7 +173,7 @@ Furthermore, extending the analysis from intra-topological domain interactions t
 The current resolution of global chromosomal conformation capture techniques (including Hi-C) remains a limiting factor in measuring accurate interaction frequencies as it is impossible to look at contacts between elincRNAs that are smaller than the highest resolution (1-5 Kb) \cite{Rao2014}⁠. Instead, only an estimation of the region surrounding the gene can be measured. In addition, even at high contact resolutions, bulk Hi-C data can only provide an average estimate of all chromosomal contacts happening in a cell population, thus masking the dynamics and cell-to-cell variablilities in contacts. Recently, a single-cell Hi-C protocol has been developed \cite{Nagano2013}⁠, allowing one to examine DNA contacts profiles at a single cell resolution. Indeed, such single cell techniques, combined with a higher contact resolution, would provide much more power to shed light on the impact of elincRNAs on gene expression regulation through modulating chromosome architecture.
 
 \section*{Materials and methods}
-Unless stated otherwise, all statistical tests were performed using R 3.3.1 \cite{RCoreTeam2016}⁠. Overlapping of genomic elements were done using either bedtools 2.26 \cite{Quinlan2010}⁠or the “intervals” package \cite{Bourgon2015}⁠ in R. Manipulations on Hi-C contact matrices were performed using the “Matrix” package \cite{Bates2016}⁠.
+Unless stated otherwise, all statistical tests were performed using R 3.3.1 \cite{RCoreTeam2016}⁠. Overlapping of genomic elements were done using either bedtools 2.26 \cite{Quinlan2010}⁠or the “intervals” package \cite{Bourgon2015}⁠ in R. Manipulations on Hi-C contact matrices were performed using the “Matrix” package \cite{Bates2016}⁠. All genetic elements used are based on the hg19 human genome.
 
 \subsection*{elincRNA definition}
 
